[package]
name = "posh-transient"
description = "A simple command-line tool that automatically adds transient-prompt to your oh-my-posh configuration."

authors = ["SssssaltyIgna"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Sssssaltyfish/posh-transient"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1.0.71"
hex = "0.4.3"
path-absolutize = "3.1.0"
